src copy/objects/API_Org_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Companies House Connector App API settings</description>
    <fields>
        <fullName>CH_Authentication_Token__c</fullName>
        <label>CH_Authentication_Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Endpoint_RegAddress_URL__c</fullName>
        <label>CH_Endpoint_RegAddress_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CH_Endpoint__c</fullName>
        <label>CH_Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CH_Endpoint_cNum_URL__c</fullName>
        <label>CH_Endpoint_cNum_URL</label>
        <type>Url</type>
    </fields>
    <label>API Org Settings</label>
</CustomObject>